--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ height: 3em;
    background-color: #483d8b; 
    border-radius: 40px;
    height: 650px;
+   box-shadow: 0 0 20px #483d8b 0.5;
 }
 
 #main-1 {
@@ -162,7 +163,7 @@ h6{
     border-color: #ecebf1;
     border-width: 0.1em;
     text-align: left;
-    box-shadow: 5px 5px 5px rgba(142, 146, 117, 0.8);
+    box-shadow: 0 0 5px rgba(142, 146, 117, 0.8);
     position: relative;
     left: 10%;
     
@@ -190,7 +191,7 @@ h5 {
     border-color: #ecebf1;
     border-width: 0.1em;
     text-align: center;
-    box-shadow: 5px 5px 5px rgba(142, 146, 117, 0.8);
+    box-shadow: 0 0 5px rgba(142, 146, 117, 0.8);
     transform: rotate(-20deg);
     position: relative;
     bottom: 70%;
@@ -234,7 +235,7 @@ h5 {
     display: flex;
     flex-direction: column;
     align-items: left; 
-    background-color: rgb(247, 246, 244);
+    background-color: rgb(228, 204, 174);
     position:relative; 
     left:32%; 
     border-radius: 20px;
@@ -242,7 +243,7 @@ h5 {
 }
 
 
-#last img{
+#js{
     width: 20%;
     object-fit: cover;
 }
@@ -253,8 +254,67 @@ h5 {
     font-size: 1.5em;
     font-weight: 500;
     margin-top: 20%;
+    width:60%;
+    position: relative;
+    bottom: 20%;
    
-    
+}
+
+#arrow {
+    width:15%; 
+    object-fit: cover;
+    position: relative;
+    left:95%; 
+    bottom:45%;
+    background-color: rgb(228, 204, 174);
+    border-radius: 50%;
+    border: 10px solid rgb(252, 252, 251);
+   
 
 }
 
+#circle1 {
+
+    width:80px; 
+    height: 80px;
+    background-color: rgba(237, 242, 234, 0.3);
+    border-radius: 50%;
+    position: relative;
+    left: 20px;
+    bottom: 40px;
+
+
+}
+
+#circle2 {
+
+    width:70px; 
+    height: 70px;
+    background-color: rgba(240, 231, 240, 0.5);
+    border-radius: 50%;
+    position:relative;
+    bottom: 60px;
+
+
+}
+
+#circle3{
+    width:90px; 
+    height: 90px;
+    background-color: rgba(235, 234, 240, 0.2);
+    border-radius: 50%;
+    position: relative;
+    right: 130px;
+    bottom: 80px;
+
+}
+
+#circles {
+
+    width:20%; 
+    height: 10%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
